--- a/src/app/product/product-list/product-list.component.css
+++ b/src/app/product/product-list/product-list.component.css
@@ -2,3 +2,12 @@
     max-width: 200px;
     margin-bottom: 20px;
   }
+
+mat-card:hover {
+  transform: scale(1.05);
+  cursor: pointer;
+}
+
+mat-card {
+  transition: transform .2s;
+}
