--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,29 @@
 /* You can add global styles to this file, and also import other style files */
 
-@import "@angular/material/prebuilt-themes/azure-blue.css";
+/* @import "@angular/material/prebuilt-themes/azure-blue.css"; */
 
-html, body { height: 100%; }
-body { margin: 10; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+@import "@angular/material/prebuilt-themes/indigo-pink.css";
+
+html,
+body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+    background-color: rgb(244, 244, 244);
+}
+
+.container {
+    padding: 50px;
+    max-width: 1200px;
+    margin: auto;
+}
+
+.container-sm {
+    padding: 50px;
+    max-width: 800px;
+    margin: auto;
+}
