--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,13 @@
-<router-outlet></router-outlet>
+    <mat-toolbar color="primary">
+        <mat-toolbar-row>
+            <a href="/products" mat-button>Products</a>
+            <a href="/cart" mat-button>Cart</a>
+        </mat-toolbar-row>
+    </mat-toolbar>
+
+    <div class="container text-center">
+        <h1>eArts</h1>
+        <h3>Make your home a special place, with our unique art works</h3>
+    </div>
+
+    <router-outlet></router-outlet>
