--- a/src/styles.css
+++ b/src/styles.css
@@ -27,3 +27,11 @@ body {
     max-width: 800px;
     margin: auto;
 }
+
+.text-center {
+    text-align: center;
+}
+
+.text-right {
+    text-align: right;
+}
