--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
     </mat-toolbar>
 
     <div class="container text-center">
-        <h1>eArts</h1>
+        <h1>eArts.shop</h1>
         <h3>Make your home a special place, with our unique art works</h3>
     </div>
 
