added search and sort

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
         <mat-toolbar-row>
             <a href="/products" mat-button>Products</a>
             <a href="/cart" mat-button>Cart</a>
+            <a href="/playground" mat-button *ngIf="isTesting">PlayGround</a>
         </mat-toolbar-row>
     </mat-toolbar>
 
