--- a/src/app/product/product-list/product-list.component.html
+++ b/src/app/product/product-list/product-list.component.html
@@ -1,12 +1,29 @@
 <div class="container">
     <h2>Our latest collection</h2>
+    <div>
+        <mat-form-field>
+            <input matInput (keyup)="applyFilter($event)" placeholder="Search">
+        </mat-form-field>
+
+        <mat-form-field class="sort-dropdown">
+            <mat-select (selectionChange)="sortProduct($event.value)" placeholder="Sort">
+                <mat-option value="priceLowHigh">Price : Low to High</mat-option>
+                <mat-option value="priceHighLow">Price : High to Low</mat-option>
+            </mat-select>
+        </mat-form-field>
+
+    </div>
+
     <div fxLayout="row wrap" fxLayoutGap="50px grid">
-        <div *ngFor="let product of products" >
+        <div *ngFor="let product of filteredProducts">
             <mat-card class="product-card">
                 <img mat-card-image src="assets/images/{{product.image_url}}">
                 <mat-card-content>
                     <mat-card-title>{{product.name}}</mat-card-title>
                     <mat-card-subtitle>{{product.price | currency : 'INR' }}</mat-card-subtitle>
+                    <div class="add-to-cart-icon">
+                        <mat-icon matSuffix (click)="addToCart(product)">add_shopping_cart</mat-icon>
+                    </div>
                 </mat-card-content>
             </mat-card>
         </div>
